--- a/style.css
+++ b/style.css
@@ -11,29 +11,31 @@ background-position: center;
 
 ul
 {
- width: 95%;
+ 
  display: flex;
  list-style-type: none;
  align-content: right;
  justify-content: right;
  position: relative;
- top: 30px;
- 
+ top: 20px; 
 }
+
 li
 {
-    display: flex;
-    height: 25px;
-    margin: 15px;
-
    
+    font-size: 1.5em;
+    display: flex;
+    height: 10px;
+    margin: 15px;   
 }
+
 a
 {
     color: aliceblue;
     text-decoration: none;
     font-weight: bold;
 }
+
 a:hover
 {
     color: yellowgreen;
@@ -49,107 +51,139 @@ a:hover
 body.detailP1
 {
     background-color: #C3B8B8;
-
-
+}
+*{
+    box-sizing: border-box;
 }
 
-.IMG_9303-2
+.image
 {
-width: 35%;
-position: absolute;
-  top: 140px;
-  left: 4vh;
-  
-
+    display: inline-block;
+    border: 3PX solid rgb(147, 160, 83);
+    float: left;
+    margin: 5px;
+    padding: 5px;
+    width: 600px;
+    height: fit-content;
+    position: relative;
+    left: 2EM;
+    top: 2em;
+ 
 }
 
-h1
+
+
+.image .place
 {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    position: absolute;
-    top: 85px;
-    left: 30px;
-    
+    font-size: 1.2em;  
+    text-align: center; 
+    padding-bottom: 5px;    
 }
 
-.IMG_1143-Edit
+
+.image .p
 {
+    font-family: 'Courier New', Courier, monospace;
+    width: 40%;
+    position: relative;
+    text-align:center;    
+}
+
+.image .IMGS
+{
+    position: relative;
+    align-items: center;
+    left: 155px;
     width: 50%;
-    height: 50%;
-    position:absolute;
-    top: 140px;
-    left: 90vh;
-      
-
+    height: auto;   
 }
 
-h2
+
+.image2
+{  
+    
+    border: 3PX solid rgb(147, 160, 83);
+    margin: 5px;
+    padding: 5px;
+    width: 600px;
+    height: fit-content;
+    position: relative;
+    right: 39em;
+    top: -22em;
+}
+
+
+.image2 .IMGS2
 {
-    position: absolute;
-    top: 85px;
-    left: 90vh;;
-   
+    position: relative;
+    align-items: center;
+    left: 200px;
+    width: 30%;
+    height: auto;   
 }
-p1
+
+.image2 .place2
+{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.2em;  
+    text-align: center; 
+    padding-bottom: 5px;    
+}
+
+.p2 
 {
     font-family: 'Courier New', Courier, monospace;
-    width: 700px;
-    margin: auto;
-    position: absolute;
-    top: 550px;
-    left: 90vh; 
-}
-.IMG_7161
-{
-
-  width: 50%;
-  position: absolute;
-  top: 1050px;
-  left: 4vh;
-
-}
-p2
-{
-    font-family: 'Courier New', Courier, monospace;
-    width: 700px;
-    margin: auto;
-    position: absolute;
-    top: 1200px;
-    left: 800px; 
+    width: 40%;
+    float: left;
+    text-align:center;    
 }
 
-h3
-{
-
-    position: absolute;
-    top: 1000px;
-    left: 4vh;
+section .image3
+{  
+    
+    border: 3PX solid rgb(147, 160, 83);
+    margin: 5px;
+    padding: 5px;
+    width: 600px;
+    height: auto;
+    position: relative;
+    align-items: center;
+    right: 77em;
+    top: -24.8em;
 }
-@media(min-width:768px)
-{
 
+.image3 .place3
+{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.2em;  
+    padding-bottom: 5px; 
+    
     
 }
 
 
+.image3 .IMGS3
+{
+
+    width: 50%;
+    height: auto; 
+}
 
 
+.p2
+{  
+    border: 3PX solid rgb(147, 160, 83);
+    
+    margin: 5px;
+    padding: 5px;
+    width: 600px;
+    position: relative;
+    right: 39em;
+    top: -22em;
+}
 
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-   
-
-
-
+.li2
+{
+    
+}
