--- a/style.css
+++ b/style.css
@@ -148,6 +148,9 @@ padding-left: 20px;
 .dis
 {
     margin-top: 40px;
+    letter-spacing: normal;
+    line-height: normal;
+    text-indent: 40px;
 }
 
 
