--- a/style.css
+++ b/style.css
@@ -57,13 +57,11 @@ top: 20px;
 
 /* when the page is active */
 
-li.active
+
+
+a.current
 {
-  font-weight: bold;  
-  background-color: bisque;
-  color: #C3B8B8;
-  border-radius: 5px;
-  padding: 5px 10px;
+    color: aqua;
 }
 
 /* for background colours for a items*/
@@ -141,6 +139,7 @@ padding-left: 20px;
     padding-top: 20px;
     font-size: 1.2em;  
     
+    
 }
 
 
@@ -151,6 +150,7 @@ padding-left: 20px;
     letter-spacing: normal;
     line-height: normal;
     text-indent: 40px;
+    word-spacing: normal;
 }
 
 
