--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,16 +2,16 @@
 /* background image*/
 body.home
 {
-background-image: url("/imgs/homepage.jpg");
+background-image: url("../imgs/homepage.jpg");    
 background-size: cover;
 background-attachment: fixed;
-width: 100%;
+
 height: 100%;
-position: absolute;
+
 background-position: center;
+
 }
 
-body
 /* logo for home page */
 .logo1
 {
