--- a/CSS/style.css
+++ b/CSS/style.css
@@ -198,6 +198,7 @@ padding-left: 20px;
 /* top discription for page 3 */
 .dis
 {
+    font-size: large;
    
     letter-spacing: normal;
     line-height: normal;
